--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,15 +18,48 @@
         android:layout_height="wrap_content"
         android:textSize="40dp"
         android:text="Location list"
-        android:id="@+id/textView" />
+        android:id="@+id/textView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/textView"
+        android:layout_above="@+id/txt_addLocation"
+        android:id="@+id/locationList"
+        style="@style/Widget.AppCompat.ListView"
+        android:headerDividersEnabled="false"
+        android:footerDividersEnabled="false" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:text="New location"
+        android:ems="10"
+        android:id="@+id/txt_addLocation"
+        android:hint="Enter location name"
+        android:singleLine="true"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/btn_AddLocation"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/locationList"/>
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="+ Add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_AddLocation"
+        android:onClick="addLocation"
+        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/locationList" />
 
 
 </RelativeLayout>
